--- a/app/src/main/res/layout/current_weather_fragment.xml
+++ b/app/src/main/res/layout/current_weather_fragment.xml
@@ -2,17 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent" android:layout_height="match_parent"
         tools:context=".ui.weather.CurrentWeatherFragment">
-
-    <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.5"
-    />
 
     <androidx.constraintlayout.widget.Group
             android:id="@+id/group_loading"
@@ -21,7 +13,7 @@
             android:layout_marginEnd="8dp"
             app:constraint_referenced_ids="progressBar_loading, textView_loading"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"/>
 
     <ProgressBar
             android:id="@+id/progressBar_loading"
@@ -38,6 +30,20 @@
             app:layout_constraintTop_toTopOf="parent"
     />
 
+    <ImageView
+            android:id="@+id/imageView_condition_icon"
+            android:layout_width="230dp"
+            android:layout_height="230dp"
+            app:layout_constraintWidth_percent="0.25"
+            tools:src="@drawable/test"
+            tools:tint="#f9a920"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/textView_location" app:layout_constraintVertical_bias="0.585"
+            tools:srcCompat="@drawable/ic_cloudy" app:layout_constraintHorizontal_bias="0.496"
+            android:layout_marginBottom="32dp"/>
     <TextView
             android:id="@+id/textView_loading"
             android:layout_width="wrap_content"
@@ -55,122 +61,95 @@
             app:layout_constraintVertical_bias="0.0"
     />
 
-    <ImageView
-            android:id="@+id/imageView_condition_icon"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.593"
-            app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.207"
-            app:layout_constraintWidth_percent="0.25"
-            tools:src="@drawable/ic_weather_sunny"
-            tools:tint="#f9a920" />
-
     <TextView
             android:id="@+id/textView_temperature"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_height="80dp"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView_condition_icon"
-            app:layout_constraintEnd_toStartOf="@+id/guideline"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/imageView_condition_icon"
-            app:layout_constraintVertical_bias="1.0"
-            tools:text="25.0°C" />
+            tools:text="25.0°C"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/textView_location"
+    />
+
+    <TextView
+            android:id="@+id/textView_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+            tools:text="Katowice"
+            app:layout_constraintBottom_toTopOf="@+id/textView_weatherDesc" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="4dp"/>
 
     <TextView
             android:id="@+id/textView_min_temp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/textView_temperature"
-            app:layout_constraintHorizontal_bias="0.423"
-            app:layout_constraintStart_toStartOf="@+id/textView_temperature"
-            app:layout_constraintTop_toBottomOf="@+id/textView_temperature"
-            app:layout_constraintVertical_bias="0.0"
-            tools:text="Min temp" />
+            tools:text="Min temp"
+            app:layout_constraintBottom_toTopOf="@+id/textView_max_temp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/guideline" app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginBottom="12dp"/>
 
     <TextView
             android:id="@+id/textView_max_temp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/textView_temperature"
-            app:layout_constraintHorizontal_bias="0.423"
-            app:layout_constraintStart_toStartOf="@+id/textView_temperature"
-            app:layout_constraintTop_toBottomOf="@+id/textView_min_temp"
-            app:layout_constraintVertical_bias="0.0"
-            tools:text="Max temp" />
+            tools:text="Max temp" android:layout_marginBottom="12dp"
+            app:layout_constraintBottom_toTopOf="@+id/textView_pressure"
+            app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
 
     <TextView
             android:id="@+id/textView_weatherDesc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.028"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.542"
-            tools:text="Desc" />
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+            tools:text="Desc"
+            app:layout_constraintBottom_toTopOf="@+id/textView_min_temp" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="20dp"/>
 
     <TextView
             android:id="@+id/textView_pressure"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.031"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView_weatherDesc"
-            app:layout_constraintVertical_bias="0.0"
-            tools:text="Pressure: " />
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+            tools:text="Pressure: " android:layout_marginBottom="12dp"
+            app:layout_constraintBottom_toTopOf="@+id/textView_humidity"
+            app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
 
     <TextView
             android:id="@+id/textView_humidity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+            tools:text="Humidity:" android:layout_marginBottom="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.031"
+            app:layout_constraintStart_toStartOf="@+id/guideline" app:layout_constraintHorizontal_bias="0.0"/>
+    <androidx.constraintlayout.widget.Guideline
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" app:layout_constraintGuide_begin="28dp" android:id="@+id/guideline"/>
+    <ImageView
+            android:src="@color/colorPrimary"
+            android:layout_width="match_parent"
+            android:layout_height="220dp"
+            android:alpha=".05"
+            android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView_pressure"
-            app:layout_constraintVertical_bias="0.0"
-            tools:text="Humidity:" />
-
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="1.0"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
